# unitree-go2-controller-ros2

./: README.md  XOR.ipynb
ros2_ws/src/logitech-controller/: CMakeLists.txt  package.xml
ros2_ws/src/logitech-controller/launch/: controller.launch.py
ros2_ws/src/logitech-controller/logitech-controller/src/: controller.cpp
ros2_ws/src/logitech-controller/src/: controller.cpp
